@@ -13,7 +13,9 @@ Version 1.4.4+svn:
  * language and i18n:
    * updated translations: Chinese (Traditional), Danish, French, Italian,
      Lithuanian, Russian, Spanish.
-
+ 
+ * Miscellaneous and bug fixes:
+   * Fixed OOS bug when giving control and having move in undo stack.
 Version 1.4.4:
  * language and i18n:
    * new translation: Latvian
