@@ -9,6 +9,8 @@ Version 1.4.4+svn:
    * updated translations: Chinese (Traditional), Danish, French, Hungarian,
      Italian, Lithuanian, Russian, Spanish
    * fonts: DejaVuSans 2.26
+ * miscellaneous and bug fixes:
+   * Fixed OOS bug when giving control and having move in undo stack.
 
 Version 1.4.4:
  * language and i18n:
